# bacon-exercises

answers/python/hello/: README.md  app.py
answers/python/hello-name/: README.md  app.py
answers/python/hello-name/runner/src/: main.rs
answers/python/hello-name/wit/: hello-name.wit
answers/python/hello-structured/: README.md  app.py
answers/python/hello-structured/runner/: Cargo.toml
answers/python/hello-structured/runner/src/: main.rs
answers/python/hello/wit/: hello.wit
