[package]
name = "runner"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.73"
clap = { version = "4.3.2", features = ["derive"] }
tokio = { version = "1.28.2", features = ["macros", "rt", "rt-multi-thread", "fs"] }
wasmtime = { git = "https://github.com/bytecodealliance/wasmtime", branch = "release-13.0.0", features = ['component-model'] }
wasmtime-wasi = { git = "https://github.com/bytecodealliance/wasmtime", branch = "release-13.0.0" }

